CORE-2325 - Fixed the footer height being squished when the page content overflows

--- a/css/footer.less
+++ b/css/footer.less
@@ -12,7 +12,8 @@ permissions and limitations under the License.
 .mw-bs {
 
     .mw-footer {
-        margin-top: 1em;
+        flex-shrink: 0;
+        padding: 1em 1em 0 1em;
     }
 
     .mw-footer.container {
